add credentials file

--- a/run-pulsar/standalone.conf
+++ b/run-pulsar/standalone.conf
@@ -530,7 +530,7 @@ superUserRoles=Xd23RHsUnvUlP7wchjNYOaIfazgeHd9x@clients
 # Authentication settings of the broker itself. Used when the broker connects to other brokers,
 # either in same or other clusters
 brokerClientAuthenticationPlugin=org.apache.pulsar.client.impl.auth.oauth2.AuthenticationOAuth2
-brokerClientAuthenticationParameters={"privateKey":"/Users/shibaodi/IdeaProjects/pulsar/pulsar-broker/src/test/resources/authentication/token/credentials_file.json","issuerUrl":"https://dev-kt-aa9ne.us.auth0.com","audience":"https://dev-kt-aa9ne.us.auth0.com/api/v2/"}
+brokerClientAuthenticationParameters={"privateKey":"./run-pulsar/credentials_file.json","issuerUrl":"https://dev-kt-aa9ne.us.auth0.com","audience":"https://dev-kt-aa9ne.us.auth0.com/api/v2/"}
 
 # Supported Athenz provider domain names(comma separated) for authentication
 athenzDomainNames=
