--- a/run-pulsar/standalone-oauth2.conf
+++ b/run-pulsar/standalone-oauth2.conf
@@ -353,22 +353,24 @@ metadataStoreBatchingMaxSizeKb=128
 
 ### --- TLS --- ###
 # Deprecated - Use webServicePortTls and brokerServicePortTls instead
-tlsEnabled=false
+tlsEnabled=true
+brokerServicePortTls=6651
+webServicePortTls=8081
 
 # Tls cert refresh duration in seconds (set 0 to check on every new connection)
 tlsCertRefreshCheckDurationSec=300
 
 # Path for the TLS certificate file
-tlsCertificateFilePath=
+tlsCertificateFilePath=/pulsar/test-conf/broker-cert.pem
 
 # Path for the TLS private key file
-tlsKeyFilePath=
+tlsKeyFilePath=/pulsar/test-conf/broker-key.pem
 
 # Path for the trusted TLS certificate file.
 # This cert is used to verify that any certs presented by connecting clients
 # are signed by a certificate authority. If this verification
 # fails, then the certs are untrusted and the connections are dropped.
-tlsTrustCertsFilePath=
+tlsTrustCertsFilePath=/pulsar/test-conf/cacert.pem
 
 # Accept untrusted TLS certificate from client.
 # If true, a client with a cert which cannot be verified with the
@@ -390,7 +392,7 @@ tlsCiphers=
 # Reject the Connection if the Client Certificate is not trusted.
 # In effect, this requires that all connecting clients perform TLS client
 # authentication.
-tlsRequireTrustedClientCertOnConnect=false
+tlsRequireTrustedClientCertOnConnect=true
 
 # Specify the TLS provider for the broker service:
 # When using TLS authentication with CACert, the valid value is either OPENSSL or JDK.
