--- a/run-pulsar/standalone-oauth2-ssl.conf
+++ b/run-pulsar/standalone-oauth2-ssl.conf
@@ -353,24 +353,24 @@ metadataStoreBatchingMaxSizeKb=128
 
 ### --- TLS --- ###
 # Deprecated - Use webServicePortTls and brokerServicePortTls instead
-tlsEnabled=true
-brokerServicePortTls=6651
-webServicePortTls=8081
+tlsEnabled=false
+# brokerServicePortTls=6651
+# webServicePortTls=8081
+# tlsCertificateFilePath=/pulsar/test-conf/broker-cert.pem
+# tlsCertRefreshCheckDurationSec=300
+# tlsKeyFilePath=/pulsar/test-conf/broker-key.pem
+# tlsTrustCertsFilePath=/pulsar/test-conf/cacert.pem
 
 # Tls cert refresh duration in seconds (set 0 to check on every new connection)
-tlsCertRefreshCheckDurationSec=300
 
 # Path for the TLS certificate file
-tlsCertificateFilePath=/pulsar/test-conf/broker-cert.pem
 
 # Path for the TLS private key file
-tlsKeyFilePath=/pulsar/test-conf/broker-key.pem
 
 # Path for the trusted TLS certificate file.
 # This cert is used to verify that any certs presented by connecting clients
 # are signed by a certificate authority. If this verification
 # fails, then the certs are untrusted and the connections are dropped.
-tlsTrustCertsFilePath=/pulsar/test-conf/cacert.pem
 
 # Accept untrusted TLS certificate from client.
 # If true, a client with a cert which cannot be verified with the
@@ -509,7 +509,7 @@ proxyRoles=
 authenticateOriginalAuthData=false
 
 # Enable authentication
-authenticationEnabled=false
+authenticationEnabled=true
 
 # Authentication provider name list, which is comma separated list of class names
 authenticationProviders=org.apache.pulsar.broker.authentication.AuthenticationProviderToken
